--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -1,4 +1,29 @@
- <h1>Sono la view per l'action Index del CoursesController</h1>
+ <h1>Catalogo dei corsi</h1>
+@for(int i=1; i<=10; i++)
+{
+<div class="row">
+    <div class="col-md-1">
+        <img src="~/homer.png" alt="" width="50">
+    </div>
+    <div class="col-md-5">
+        <h2>Titolo del corso</h2>
+        <author>Nome autore</author>
+    </div>
+    <div class="col-md-2">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+    </div>
+    <div class="col-md-2">
+        EUR 10,99 <br /> <s>EUR 12,99</s>
+    </div>
+    <div class="col">
+        <a class="btn btn-outline-primary" asp-action="Detail" asp-controller="Courses" asp-route-id="5">Dettaglio corso 5</a>
+    </div>
+</div>
+}
 
 
 
