--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="~/lib/jquery/jquery-ui.min.css">
         <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/all.min.css">
     </environment>
-    
+    <link rel="stylesheet" type="text/css" href="~/style.css">
 </head>
 <body>
     <header>
