--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -1,28 +1,37 @@
- <h1>Catalogo dei corsi</h1>
+ @model List<CourseViewModel> 
+ <h1>@ViewData["Title"]</h1>
 
-@for(int i=1; i<=10; i++)
+@foreach(CourseViewModel course in Model)
 {
 <hr>
 <div class="row course">
     <div class="col-md-1">
-        <img src="~/logo.svg" alt="" width="52" height="52">
+        <img src="@course.ImagePath" alt="" width="52" height="52" asp-append-version="false">
     </div>
     <div class="col-md-5">
-        <h2>Titolo del corso</h2>
-        <author>Nome autore</author>
+        <h2>@course.Title</h2>
+        <author>@course.Author</author>
     </div>
-    <div class="col-md-2 rating">
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
+    <div class="col-md-2 rating" title="@course.Rating">
+        @for(int i=1; i<=5; i++){
+            if(course.Rating >= i){
+                <i class="fas fa-star"></i>
+            }
+            else if(course.Rating > i -1){
+                <i class="fas fa-star-half-alt"></i>
+            }else{
+                <i class="far fa-star"></i>
+            }
+        }
     </div>
     <div class="col-md-2 price">
-        EUR 10,99 <br /> <s>EUR 12,99</s>
+        @course.CurrentPrice
+        @if(!course.CurrentPrice.Equals(course.FullPrice)) {
+          <br/> <s>@course.FullPrice</s>
+        }
     </div>
     <div class="col-md-2 d-flex align-items-center">
-        <a class="btn btn-outline-primary" asp-action="Detail" asp-controller="Courses" asp-route-id="5">Dettagli</a>
+        <a class="btn btn-outline-primary" asp-action="Detail" asp-controller="Courses" asp-route-id="@course.Id">Dettagli</a>
     </div>
 </div>
 }
